{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 615,
  "lineage": "83d70e3e-9c85-27e2-c0f8-aaea375a1640",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0760c610636e0b12f",
            "description": "bastion",
            "filter": null,
            "id": "sg-0760c610636e0b12f",
            "name": "terraform-20230709071344103800000001",
            "tags": {
              "Envrionment": "ops",
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "con_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-03366ca2b48574c6f",
            "description": "con_linux",
            "filter": null,
            "id": "sg-03366ca2b48574c6f",
            "name": "terraform-20230709071842576000000001",
            "tags": {
              "Envrionment": "ops",
              "Name": "con_linux"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0e317e5f5ccee3cb4",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0e317e5f5ccee3cb4",
            "name": "alb_sg",
            "tags": {
              "Envrionment": "ops",
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-085cdfbaa1b5582e9",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-085cdfbaa1b5582e9",
            "name": "main_web_server_sg",
            "tags": {
              "Envrionment": "ops",
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "window",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0d4729a6133e550ba",
            "description": "window",
            "filter": null,
            "id": "sg-0d4729a6133e550ba",
            "name": "terraform-20230709071842576100000002",
            "tags": {
              "Envrionment": "ops",
              "Name": "window"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-08dcd3eb4618b6226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "ops"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "WebServer-A"
                ]
              }
            ],
            "id": "subnet-08dcd3eb4618b6226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "ops",
              "Name": "WebServer-A",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0c5e0d170eec159d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "ops"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "WebServer-C"
                ]
              }
            ],
            "id": "subnet-0c5e0d170eec159d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "ops",
              "Name": "WebServer-C",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0af3c7d3fa86d0050",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "ops"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "DBMS-A"
                ]
              }
            ],
            "id": "subnet-0af3c7d3fa86d0050",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "ops",
              "Name": "DBMS-A",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0bbd7572f1c49cdaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 249,
            "cidr_block": "192.168.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "ops"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "DBMS-C"
                ]
              }
            ],
            "id": "subnet-0bbd7572f1c49cdaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "ops",
              "Name": "DBMS-C",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0f799d1b76bc82ed6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 249,
            "cidr_block": "192.168.5.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "ops"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "Window"
                ]
              }
            ],
            "id": "subnet-0f799d1b76bc82ed6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "ops",
              "Name": "Window",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0659495809581a580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 247,
            "cidr_block": "192.168.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "ops"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "ALB\u0026NAT"
                ]
              }
            ],
            "id": "subnet-0659495809581a580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "ops",
              "Name": "ALB\u0026NAT",
              "Tier": "public"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0e4aeacc593b6738a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "ops"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "ALB"
                ]
              }
            ],
            "id": "subnet-0e4aeacc593b6738a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "ops",
              "Name": "ALB",
              "Tier": "public"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc/vpc-06bded5f3b5fbaae5",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e5f9e633fc161c25",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0705ec2b8c927dbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bded5f3b5fbaae5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00619c630e1444859",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "ops",
              "Name": "ops_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "gnualb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:loadbalancer/app/gnualb-web/5e51726a0d7d0637",
            "arn_suffix": "app/gnualb-web/5e51726a0d7d0637",
            "desync_mitigation_mode": "defensive",
            "dns_name": "gnualb-web-882226510.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:loadbalancer/app/gnualb-web/5e51726a0d7d0637",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gnualb-web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e317e5f5ccee3cb4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0659495809581a580"
              },
              {
                "subnet_id": "subnet-0e4aeacc593b6738a"
              }
            ],
            "subnets": [
              "subnet-0659495809581a580",
              "subnet-0e4aeacc593b6738a"
            ],
            "tags": {
              "Name": "gnualb_web"
            },
            "tags_all": {
              "Name": "gnualb_web"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "data.aws_security_group.elb_sg",
            "data.aws_subnet.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:listener/app/gnualb-web/5e51726a0d7d0637/fcc1eed6fe171450",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/cand0-gnuboard-target-group/ff8fd9b66160563c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:listener/app/gnualb-web/5e51726a0d7d0637/fcc1eed6fe171450",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:loadbalancer/app/gnualb-web/5e51726a0d7d0637",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.gnualb_web",
            "aws_alb_target_group.alb_web_tg",
            "data.aws_security_group.elb_sg",
            "data.aws_subnet.public",
            "data.aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/cand0-gnuboard-target-group/ff8fd9b66160563c",
            "arn_suffix": "targetgroup/cand0-gnuboard-target-group/ff8fd9b66160563c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/gnuboard",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/cand0-gnuboard-target-group/ff8fd9b66160563c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cand0-gnuboard-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Gnuboard Target Group"
            },
            "tags_all": {
              "Name": "Gnuboard Target Group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "data.aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_tg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/cand0-gnuboard-target-group/ff8fd9b66160563c-20230709072655136900000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/cand0-gnuboard-target-group/ff8fd9b66160563c",
            "target_id": "i-0cf0b02535e7af8b1"
          },
          "dependencies": [
            "aws_alb_target_group.alb_web_tg",
            "aws_iam_instance_profile.ec2_server",
            "aws_iam_role.ec2_server_policy",
            "aws_instance.web_server",
            "aws_network_interface.web_network_interface",
            "data.aws_kms_key.storage_key",
            "data.aws_security_group.web",
            "data.aws_subnet.private",
            "data.aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/cand0-gnuboard-target-group/ff8fd9b66160563c-20230709072655050800000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/cand0-gnuboard-target-group/ff8fd9b66160563c",
            "target_id": "i-0d8bc80619c15f665"
          },
          "dependencies": [
            "aws_alb_target_group.alb_web_tg",
            "aws_iam_instance_profile.ec2_server",
            "aws_iam_role.ec2_server_policy",
            "aws_instance.web_server",
            "aws_network_interface.web_network_interface",
            "data.aws_kms_key.storage_key",
            "data.aws_security_group.web",
            "data.aws_subnet.private",
            "data.aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02727842b84fc892d",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-0841e14e90b869db5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-0841e14e90b869db5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f5b720fada649a40",
            "private_dns": "ip-192-168-11-123.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.11.123",
            "public_ip": "3.113.29.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b81488704bef8976",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0659495809581a580",
            "tags": {
              "Envrionment": "ops",
              "Name": "ops_bastion"
            },
            "tags_all": {
              "Envrionment": "ops",
              "Name": "ops_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0760c610636e0b12f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_server",
            "aws_iam_role.ec2_server_policy",
            "data.aws_security_group.bastion",
            "data.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ac55e46a9008f2",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-0cf0b02535e7af8b1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-0cf0b02535e7af8b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-027f2190f2a812508"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027f2190f2a812508",
            "private_dns": "ip-192-168-1-100.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:569083195829:key/081cd182-c91d-407d-b624-88a9fe434e9b",
                "throughput": 0,
                "volume_id": "vol-0efb0935f0d9361b3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dcd3eb4618b6226",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085cdfbaa1b5582e9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_server",
            "aws_iam_role.ec2_server_policy",
            "aws_network_interface.web_network_interface",
            "data.aws_kms_key.storage_key",
            "data.aws_security_group.web",
            "data.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ac55e46a9008f2",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-0d8bc80619c15f665",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-0d8bc80619c15f665",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e5cb7297b209ba15"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5cb7297b209ba15",
            "private_dns": "ip-192-168-2-100.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:569083195829:key/081cd182-c91d-407d-b624-88a9fe434e9b",
                "throughput": 0,
                "volume_id": "vol-0d6662df21cc22160",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5e0d170eec159d3",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085cdfbaa1b5582e9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_server",
            "aws_iam_role.ec2_server_policy",
            "aws_network_interface.web_network_interface",
            "data.aws_kms_key.storage_key",
            "data.aws_security_group.web",
            "data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "window",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051616b1e416b0b74",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-021bc8b420a71040f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021bc8b420a71040f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04de4ad4438d3d095"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04de4ad4438d3d095",
            "private_dns": "ip-192-168-5-100.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.5.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:569083195829:key/081cd182-c91d-407d-b624-88a9fe434e9b",
                "throughput": 0,
                "volume_id": "vol-052eb7c1db555f091",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f799d1b76bc82ed6",
            "tags": {
              "Name": "Window"
            },
            "tags_all": {
              "Name": "Window"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4729a6133e550ba"
            ]
          },
          "dependencies": [
            "aws_network_interface.window",
            "data.aws_kms_key.storage_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "window2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051616b1e416b0b74",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-0d548b01dd862e3c4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d548b01dd862e3c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-01a0742bae1e93f35"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a0742bae1e93f35",
            "private_dns": "ip-192-168-5-102.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.5.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:569083195829:key/081cd182-c91d-407d-b624-88a9fe434e9b",
                "throughput": 0,
                "volume_id": "vol-0076d0c66fd429e88",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f799d1b76bc82ed6",
            "tags": {
              "Name": "con_linux"
            },
            "tags_all": {
              "Name": "con_linux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03366ca2b48574c6f"
            ]
          },
          "dependencies": [
            "aws_network_interface.window2",
            "data.aws_kms_key.storage_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:network-interface/eni-027f2190f2a812508",
            "attachment": [
              {
                "attachment_id": "eni-attach-0831d5254ba0620b6",
                "device_index": 0,
                "instance": "i-0cf0b02535e7af8b1"
              }
            ],
            "id": "eni-027f2190f2a812508",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:15:b0:6f:b9:1b",
            "owner_id": "569083195829",
            "private_ip": "192.168.1.100",
            "private_ip_list": [
              "192.168.1.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-085cdfbaa1b5582e9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dcd3eb4618b6226",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "data.aws_security_group.web",
            "data.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:network-interface/eni-0e5cb7297b209ba15",
            "attachment": [
              {
                "attachment_id": "eni-attach-0dda7eab62fab8a16",
                "device_index": 0,
                "instance": "i-0d8bc80619c15f665"
              }
            ],
            "id": "eni-0e5cb7297b209ba15",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:cd:ea:6d:b4:c5",
            "owner_id": "569083195829",
            "private_ip": "192.168.2.100",
            "private_ip_list": [
              "192.168.2.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.2.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-085cdfbaa1b5582e9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5e0d170eec159d3",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "data.aws_security_group.web",
            "data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "window",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:network-interface/eni-04de4ad4438d3d095",
            "attachment": [
              {
                "attachment_id": "eni-attach-0d8c8680c5f5ab315",
                "device_index": 0,
                "instance": "i-0f7f6bb00e97e1282"
              }
            ],
            "id": "eni-04de4ad4438d3d095",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:6c:93:ab:af:9b",
            "owner_id": "569083195829",
            "private_ip": "192.168.5.100",
            "private_ip_list": [
              "192.168.5.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.5.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d4729a6133e550ba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f799d1b76bc82ed6",
            "tags": {
              "Name": "Window_network_interface"
            },
            "tags_all": {
              "Name": "Window_network_interface"
            }
          },
          "dependencies": [
            "data.aws_security_group.window",
            "data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "window2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:network-interface/eni-01a0742bae1e93f35",
            "attachment": [
              {
                "attachment_id": "eni-attach-002014d7315f694ca",
                "device_index": 0,
                "instance": "i-0c7eff20480d32756"
              }
            ],
            "id": "eni-01a0742bae1e93f35",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:71:b1:ae:0e:7d",
            "owner_id": "569083195829",
            "private_ip": "192.168.5.102",
            "private_ip_list": [
              "192.168.5.102"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.5.102"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03366ca2b48574c6f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f799d1b76bc82ed6",
            "tags": {
              "Name": "con_linux_network_interface"
            },
            "tags_all": {
              "Name": "con_linux_network_interface"
            }
          },
          "dependencies": [
            "data.aws_security_group.con_linux",
            "data.aws_subnet.private"
          ]
        }
      ]
    }
  ]
}